--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -20,6 +20,10 @@
 			font-weight: bold;
 			color: #0D2C40;
 		}
+		nav {
+			background-color: #00A6B3;
+			padding: 20px 0px;
+		}	
 		body {
 			text-align: center;
 		}
@@ -43,12 +47,7 @@
 </nav>
 <h2>Instructions</h2>
 <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
-<div>
-	<img src="images/back.png" alt="Queen of Diamonds">
-	<img src="images/back.png" alt="Queen of Hearts">
-	<img src="images/back.png" alt="King of Diamonds">
-	<img src="images/back.png" alt="King of Hearts">
-</div>
+<div id="game-board" class="board clearfix"></div>
 </main>
 <script src="js/main.js"></script>
 </body>
